# P2_Workflows_Outliers

./: .gitignore  HalfSpaceTrees.ipynb  P2_Outliers_V2.0.ipynb  README.md  benchmark_outliers.py  benchmark_results.csv  kmeans.ipynb  main.py  practica2.ipynb  pyproject.toml
